# news_highlights_fetcher

./: .gitignore  README.md  pyproject.toml
config/: defaults.yaml
src/news_highlights_fetcher/: __init__.py  cli.py  config.py  emailer.py  fetcher.py  lambda_handler.py  models.py  runner.py  summarizer.py
